css sidebarSwitcher:fix click capturing by better z-indexing

--- a/theme_src/scss/organisms/navigation.scss
+++ b/theme_src/scss/organisms/navigation.scss
@@ -91,7 +91,6 @@
 
 /* Handles to switch sidebar content (and open for mobile) */
 #sidebarSwitcher {
-  z-index: 10;
   display: grid;   // create nested grid
   grid-template-rows: min-content min-content min-content min-content min-content;
   justify-content: end;
@@ -100,5 +99,10 @@
   @include smUp {
     grid-column: 1/-3;   // skip sidebar
   }
+}
+
+#sidebarSwitcher > * {
+  // note: don't set z-index on #sidebarSwitcher since it would inhibit click through to underlaying
+  z-index: 10;
 }
 
